API DEV: 1. Add new endpoints to fetch all and specific observation 2. Add unit test
